<resources>
    <string name="app_name">BattNot</string>

    <string name="health_cold">Cold</string>
    <string name="health_dead">Dead</string>
    <string name="health_healthy">Healthy</string>
    <string name="health_overheating">Overheating</string>
    <string name="health_overvoltage">Over Voltage</string>
    <string name="health_unknown">Unknown</string>

    <string name="message_permission_failure">Failed to grant permission</string>
    <string name="message_root_failure">Failed to execute root command</string>
    <string name="message_starting">Starting BattNot&#8230;</string>
    <string name="message_permission_granted">Permission granted</string>
    <string name="message_unknown_error">Unknown error</string>
    <string name="message_received_strange_intent">Received strange intent: %1$s</string>

    <string name="preference_filename">Settings</string>
    <string name="preference_notification" translatable="false">NotificationEnabled</string>
    <string name="preference_notification_desc">Enable Notification</string>
    <string name="preference_notification_desc_summary">Create a persistent notification</string>
    <string name="preference_fahrenheit" translatable="false">FahrenheitEnabled</string>
    <string name="preference_fahrenheit_desc">Use Fahrenheit</string>
    <string name="preference_immediate" translatable="false">UpdateImmediately</string>
    <string name="preference_immediate_desc">Update Notification Immediately</string>
    <string name="preference_immediate_desc_summary">Requires a background service</string>
    <string name="preference_time_remaining" translatable="false">TimeRemainingEnabled</string>
    <string name="preference_time_remaining_desc">Show Time Remaining On Battery/Charging</string>
    <string name="preference_notification_settings" translatable="false">key_open_notification_settings</string>
    <string name="preference_notification_settings_desc">Open Device Notification Settings</string>
    <string name="preference_notification_settings_desc_summary">For Devices On Android 5.0+</string>

    <string name="format_time_remaining_days">%1$dd %2$dh %3$dm left</string>
    <string name="format_time_remaining_hours">%1$dh %2$dm left</string>
    <string name="format_time_remaining_mins">%1$dm left</string>
    <string name="format_temperature_c">%1$.1f°C</string>
    <string name="format_temperature_f">%1$.1f°F</string>
    <string name="format_amperage_a">%1$.1fA</string>
    <string name="format_amperage_ma">%1$.1fmA</string>
    <string name="format_amperage_ua">%1$d.0μA</string>
    <string name="format_voltage">%1$.2fV</string>
    <string name="format_percent">%1$d%%</string>
    <string name="format_command" translatable="false">pm grant %1$s %2$s</string>

    <string name="notification_spacer">" • "</string>
    <string name="notification_channel_description">Ongoing notification to show battery information</string>

    <string name="dialog_time_remaining_title">Failed to Give Permission Automatically</string>
    <string name="dialog_time_remaining_content">BattNot could not obtain the BATTERY_STATS permission automatically. If your device is rooted, please press \"Try Again\" and allow the root command. Otherwise, you can use ADB to give this permission.</string>
    <string name="dialog_adb_title">ADB Instructions</string>
    <string name="dialog_adb_content">Please run the following command to give the required permission:</string>
    <string name="dialog_foreground_content">Unfortunately, the battery notification is no longer minimized. You can open the notification settings and make it minimized.</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_tryagain">Try Again</string>
    <string name="dialog_button_notification_settings">Notification Settings</string>
</resources>
